--- a/index.html
+++ b/index.html
@@ -45,16 +45,16 @@
             </div>
         </nav>
         <!-- images slider carousel -->
-        <section class="container">
+        <section class="container my-5">
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <div class="row panda-bg-info bg-gradient p-5 d-flex align-items-center">
+                        <div class="row panda-bg-info bg-gradient p-4 my-5 d-flex align-items-center">
                             <div class="col-lg-7">
                                 <h1>Cool Dude Headphone</h1>
                                 <p>This is the best headphone in the world for people who just want to waste time in
                                     front of funky world.</p>
-                                <h1>$420</h1>
+                                <h1 class="price-color">$420</h1>
                                 <button class="btn btn-buy-now">Buy Now</button>
                             </div>
                             <div class="col-lg-5">
@@ -63,12 +63,12 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <div class="row panda-bg-info bg-gradient p-5 d-flex align-items-center">
+                        <div class="row panda-bg-info bg-gradient p-4 my-5 d-flex align-items-center">
                             <div class="col-lg-7">
                                 <h1>Mega LCD TV For Sports</h1>
                                 <p>This is the best tv in the world for people who just want to waste time in front of
                                     tv.</p>
-                                <h1>$1200</h1>
+                                <h1 class="price-color">$1200</h1>
                                 <button class="btn btn-buy-now">Buy Now</button>
                             </div>
                             <div class="col-lg-5">
@@ -77,7 +77,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <div class="row panda-bg-info bg-gradient p-5 d-flex align-items-center">
+                        <div class="row panda-bg-info bg-gradient p-4 my-5 d-flex align-items-center">
                             <div class="col-lg-7">
                                 <h1>
                                     X-Box for your living room
@@ -86,7 +86,7 @@
                                     of fake sports.
 
                                 </p>
-                                <h1>$600</h1>
+                                <h1 class="price-color">$600</h1>
                                 <button class="btn btn-buy-now">Buy Now</button>
                             </div>
                             <div class="col-lg-5">
@@ -109,6 +109,7 @@
         </section>
     </header>
     <main>
+        <!-- catagories section -->
         <section class="container my-5">
             <div class="row g-5">
                 <div class="col-12 col-lg-4 col-md-6">
